# IANSEO-PDF-import-tool

./: .dockerignore  .railwayignore  CHANGELOG.md  Dockerfile  FIX_SUMMARY.md  OVERVIEW.md  Procfile  README.md  REMAINING_FIXES.md  nixpacks.toml  pyproject.toml  requirements.txt  setup.py
src/archery_parser/: __init__.py  __main__.py  assembler.py  cli.py  detector.py  lookups.py  models.py  reader.py  transformer.py  web.py  writer.py
tests/: __init__.py  test_assembler.py  test_detector.py  test_integration.py  test_reader.py  test_stage1_models_lookups.py  test_transformer.py  test_writer.py
tests/fixtures/: README.txt
