[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archery-parser"
version = "1.0.0"
description = "Ianseo PDF qualification result → structured CSV pipeline"
authors = [{ name = "Vana-Võidu Vibuklubi" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10",
    "flask>=3.0",
    "gunicorn>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
archery-parser = "archery_parser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
